Reverted changes to Maven dependencies